--- a/partials/sticky-header-bar.html
+++ b/partials/sticky-header-bar.html
@@ -27,10 +27,9 @@
       <li class="nav-item" tabindex="0" aria-haspopup="true" aria-expanded="false">
         <a href="방문.html">방문</a>
         <ul class="nav-sub" role="menu" aria-label="방문 하위 메뉴">
-          <li role="menuitem"><a href="방문.html#운영시간">운영 시간</a></li>
+          <li role="menuitem"><a href="방문.html#운영시간">운영 안내</a></li>
           <li role="menuitem"><a href="방문.html#이용요금">이용 요금</a></li>
           <li role="menuitem"><a href="방문.html#편의시설">편의 시설</a></li>
-          <li role="menuitem"><a href="방문.html#오시는길">오시는 길</a></li>
           <li role="menuitem"><a href="방문.html#문의">문의</a></li>
         </ul>
       </li>
